--- a/Pages/AddRooms.cshtml
+++ b/Pages/AddRooms.cshtml
@@ -140,13 +140,12 @@
 
 
                             </div>
-                            @* hiding roomNumber name as it is not in ppt *@
-                            @* <div class="mb-4">
+                            <div class="mb-4">
                                 <label for="roomName">@Model.lblRoomName</label>
                                 <input type="text" name="RoomName" value="@Model.RoomName" class="form-control"
                                        id="roomName">
 
-                            </div> *@
+                            </div>
 
                             <div class="mb-4">
                                 <label for="RoomDesc">@Model.lblRoomDesc</label>
