--- a/Pages/EditRoom.cshtml
+++ b/Pages/EditRoom.cshtml
@@ -144,14 +144,13 @@
                                       else.</small> -->
                             </div>
 
-                            @* hiding roomNumber name as it is not in ppt *@
-                            @* <div class="mb-4">
+                            <div class="mb-4">
                                 <label for="roomName">@Model.lblRoomName</label>
                                 <input type="text" name="RoomName" value="@Model.RoomName" class="form-control"
                                        id="roomName">
                                 <!--   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                                        else.</small> -->
-                            </div> *@
+                            </div>
 
                             <div class="mb-4">
                                 <label for="RoomDesc">@Model.lblRoomDesc</label>
