--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -44,10 +44,16 @@
             <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                 <strong>Receiving Report - Serial No: @report.SerialNumber</strong>
                 <div>
-                    <a asp-page="/EditReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-success me-2 text-white">Edit</a>
+                    @* <a asp-page="/EditReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-success me-2 text-white">Edit</a> *@
                     @* <a asp-page="/PrintReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-secondary">Print</a> *@
                     
-                    <button id="PrintReport" class="btn btn-primary" >Print Test</button>
+                    
+                    <form method="post">
+                        <input type="hidden" value="@report.SerialNumber" name="serialNumber" />
+                        <input type="hidden" value="@report.Id" name="ReceivingReportId" />
+                        @* <input type="submit" value="Edit" class="btn btn-secondary" asp-page-handler="Edit" /> *@
+                        <button id="PrintReport" class="btn btn-primary">Print Test</button>
+                    </form>
 
                 </div>
             </div>
