--- a/Pages/AddUser.cshtml
+++ b/Pages/AddUser.cshtml
@@ -134,7 +134,7 @@
                             <div class="mb-4">
                                 <label for="JobNumber">@Model.lblJobNumber</label>
 
-                                <input type="text" class="form-control" id="JobNumber" name="JobNumber"
+                                <input type="number" class="form-control" id="JobNumber" name="JobNumber"
                                     value="@Model.JobNumber" />
 
                             </div>
@@ -166,7 +166,7 @@
                             <div class="mb-4">
                                 <label for="Transfer">@Model.lblTransfer</label>
 
-                                <input type="text" class="form-control" id="Transfer" name="Transfer"
+                                <input type="number" class="form-control" id="Transfer" name="Transfer"
                                     value="@Model.Transfer" />
 
                             </div>
