--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -219,7 +219,7 @@
                                                 else if(senderGroupName == "General Supervisor" && Model.UserGroupName == "Technical Member"){
                                                     <button class="btn btn-info btn-sm" data-toggle="modal" data-target="#ReplyModal" onclick="setReplyReportId(@inbox.ReportId,'@inbox.SenderId',@inbox.Id)">Reply & Resend</button>
 
-                                                    <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReportId,setRejectReportId @inbox.Id)">Comment & Reject</button>
+                                                    <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReportId, @inbox.Id)">Comment & Reject</button>
                                                 }
 
 
