--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -52,7 +52,7 @@
                         <input type="hidden" value="@report.SerialNumber" name="serialNumber" />
                         <input type="hidden" value="@report.Id" name="ReceivingReportId" />
                         @* <input type="submit" value="Edit" class="btn btn-secondary" asp-page-handler="Edit" /> *@
-                        <button id="PrintReport" class="btn btn-primary">Print Test</button>
+                        <button id="PrintReport" class="btn btn-primary">Print</button>
                     </form>
 
                 </div>
