--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -77,7 +77,7 @@
                                 @foreach (var Warehouse in Model.Warehouses)
                                 {   var ManagerName = Model.Users.FirstOrDefault(u => u.UserId == Warehouse.WarehouseManagerId)?.   FullName ?? "";
                                 var JobNumber = Model.Users.FirstOrDefault(u => u.UserId == Warehouse.WarehouseManagerId)?.   JobNumber ;
-                                    <option value="@Warehouse.StoreId" data-manager ="@ManagerName" data-jobnumber="@JobNumber">@Warehouse.StoreName</option>
+                                    <option value="@Warehouse.StoreId" data-manager ="@ManagerName" data-jobnumber="@JobNumber" data-managerid="@Warehouse.WarehouseManagerId">@Warehouse.StoreName</option>
                                 }
 
                             </select>
@@ -230,7 +230,8 @@
 
                         <div class="form-group mb-4">
                             <label>@Model.lblRecipientID</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                            <input asp-for="Report.RecipientEmployeeId" id="RecipientEmployeeId" class="form-control"  readonly/>
+                            <input id="RecipientJobNumber" name="RecipientJobNumber" value="@Model.RecipientJobNumber" class="form-control"  readonly/>
+                            <input type="hidden"  asp-for="Report.RecipientEmployeeId" id="RecipientEmployeeId"/>
                         </div>
                         <div class="form-group mb-4">
                             <label>@Model.lblRecipientName</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
@@ -617,9 +618,11 @@
                 const selectedOption = this.options[this.selectedIndex];
                 const manager = selectedOption.getAttribute("data-manager");
                 const jobnumber = selectedOption.getAttribute("data-jobnumber");
+                const managerid = selectedOption.getAttribute("data-managerid");
 
 
-                document.getElementById("RecipientEmployeeId").value = jobnumber || '';
+                document.getElementById("RecipientEmployeeId").value = managerid || '';
+                document.getElementById("RecipientJobNumber").value = jobnumber || '';
                 document.getElementById("RecipientEmployeeName").value = manager || '';
 
 
